--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
   --main-color: #61b324;
   --text-color: #fd180b;
   --other-color: #999fb9;
-  --big-font-size: 4.8rem;
+  --big-font: 4.8rem;
   --h2-font: 3.2rem;
   --p-font: 1rem;
 }
@@ -84,7 +84,7 @@ section {
 
 .home-text h1 {
   margin: 20px 0px 20px;
-  font-size: var(--big-font-size);
+  font-size: var(--big-font);
   line-height: 1.1;
 }
 .home-text h3 {
@@ -488,7 +488,7 @@ section {
 
 @media (max-width: 1090px) {
   :root {
-    --big-font-size: 3.7rem;
+    --big-font: 3.7rem;
     --h2-font: 2.6rem;
     --p-font: 1rem;
     transition: 0.3s;
@@ -509,7 +509,7 @@ section {
     padding: 80px 3%;
   }
   :root {
-    --big-font-size: 3.2rem;
+    --big-font: 3.2rem;
     --h2-font: 2.2rem;
   }
 }
@@ -526,7 +526,7 @@ section {
     padding: 80px 3%;
   }
   :root {
-    --big-font-size: 3.2rem;
+    --big-font: 3.2rem;
     --h2-font: 2.2rem;
   }
 }
@@ -543,7 +543,7 @@ section {
     padding: 80px 3%;
   }
   :root {
-    --big-font-size: 3.2rem;
+    --big-font: 3.2rem;
     --h2-font: 2.2rem;
   }
 }
@@ -866,7 +866,7 @@ section {
 
 .home-text h1 {
   margin: 20px 0px 20px;
-  font-size: var(--big-font-size);
+  font-size: var(--big-font);
   line-height: 1.1;
 }
 .home-text h3 {
@@ -1275,7 +1275,7 @@ section {
 
 @media (max-width: 1090px) {
   :root {
-    --big-font-size: 3.7rem;
+    --big-font: 3.7rem;
     --h2-font: 2.6rem;
     --p-font: 1rem;
     transition: 0.3s;
@@ -1299,7 +1299,7 @@ section {
     padding: 80px 3%;
   }
   :root {
-    --big-font-size: 3.2rem;
+    --big-font: 3.2rem;
     --h2-font: 2.2rem;
   }
 }
@@ -1313,7 +1313,7 @@ section {
     padding: 80px 3%;
   }
   :root {
-    --big-font-size: 3.2rem;
+    --big-font: 3.2rem;
     --h2-font: 2.2rem;
   }
 }
